--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,8 @@
             ],
             "styles": [ 
               "src/assets/scss/paper-dashboard.scss",
-              "src/assets/css/demo.css"
+              "src/assets/css/demo.css",
+              "src/assets/css/colours.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.js",
