--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@ng-bootstrap/ng-bootstrap": "^2.1.0",
     "@ng-select/ng-select": "^2.11.2",
     "@ngui/map": "0.30.3",
+    "@swimlane/ngx-charts": "^10.0.0",
     "@types/googlemaps": "3.26.14",
     "ajv": "6.5.0",
+    "angular2-fontawesome": "^5.2.1",
     "angularfire2": "^5.0.0-rc.11",
     "bootstrap": "4.1.0",
     "bootstrap-notify": "3.1.3",
@@ -62,6 +64,7 @@
     "easy-pie-chart": "2.1.7",
     "eonasdan-bootstrap-datetimepicker": "4.17.47",
     "firebase": "^5.3.1",
+    "font-awesome": "^4.7.0",
     "fullcalendar": "3.4.0",
     "jasny-bootstrap": "3.1.3",
     "jquery": "^3.2.1",
@@ -69,12 +72,13 @@
     "jw-bootstrap-switch-ng2": "1.0.10",
     "moment": "^2.22.2",
     "ng-select": "^1.0.0",
+    "ng2-file-upload": "^1.3.0",
     "ngx-chips": "^1.9.2",
     "nouislider": "9.2.0",
     "perfect-scrollbar": "^1.4.0",
     "popper.js": "1.14.1",
     "rxjs": "6.1.0",
-    "rxjs-compat": "6.1.0",
+    "rxjs-compat": "^6.1.0",
     "sweetalert2": "7.22.0",
     "twitter-bootstrap-wizard": "1.2.0",
     "utf-8-validate": "^4.0.0",
@@ -90,6 +94,7 @@
     "@angular/platform-server": "^6.0.0",
     "@types/bootstrap": "3.3.32",
     "@types/chartist": "0.9.34",
+    "@types/d3": "^5.0.1",
     "@types/jasmine": "2.5.38",
     "@types/jquery": "1.10.31",
     "@types/node": "6.0.73",
@@ -100,7 +105,7 @@
     "es6-module-loader": "^0.17.10",
     "es6-shim": "^0.35.0",
     "fs-extra": "^4.0.0",
-    "gulp": "^3.9.0",
+    "gulp": "^4.0.0",
     "gulp-jasmine": "^2.2.1",
     "gulp-typescript": "^2.10.0",
     "gzip-size": "^4.0.0",
@@ -109,7 +114,7 @@
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
     "json": "^9.0.3",
-    "karma": "2.0.2",
+    "karma": "^3.1.3",
     "karma-chrome-launcher": "2.0.0",
     "karma-cli": "1.0.1",
     "karma-coverage-istanbul-reporter": "0.2.0",
